# samples

./: .gitignore  CLAUDE.md  LICENSE  README.md  compose.yaml
.claude/: settings.json
.github/ISSUE_TEMPLATE/: sample-request.md
.github/workflows/: build-samples-json.yml  check-sample.yml  deploy-changed-samples.yml  publish-sample-template.yml  test-scripts.yml  update-template-workflows.yml
caddy/: Caddyfile
elixir-api/: Dockerfile  mix.exs
elixir-api/config/: config.exs  runtime.exs
haskell-worker/: Dockerfile  package.yaml  stack.yaml
haskell-worker/app/: Main.hs
nats/: nats-server.conf
rust-ws/: Cargo.toml  Dockerfile
rust-ws/src/: main.rs
samples/: package.json  script.py
samples/FastAPI/: README.md  compose.yaml
samples/RAG-chatbot/: Dockerfile  README.md  app.py  compose.dev.yaml  compose.yaml  docs.md  download_models.py  get_knowledge_base.py  knowledge_base.json  parse_basic.py  rag_system.py  requirements.txt  scrape_sitemap.py
samples/agentic-autogen/: .gitignore  README.md  compose.yaml
samples/agentic-langgraph/: README.md  compose.yaml
samples/agentic-strands/: README.md  compose.dev.yaml  (+1 more)
scripts/: add-checklist-to-pr.js  changed-samples.sh  check-modified-samples.sh  check-sample-files.sh  compose-sample.sh  deploy-sample.sh  deploy-samples.sh  generate-samples-list.js  new-sample.sh  package-lock.json  package.json  template-manager.js  test.js  update-template-workflows.js  workflow-utils.js  workflow-utils.test.js
starter-sample/: README.md  compose.dev.yaml  compose.yaml
templates/: defang.yaml  deploy.yaml
(+1245 files in other folders)
